// Enabler proto 3 i stedet for 2
syntax = "proto3";

// Stores Autogenerated code from .proto file
package com.examApplication.stub.exam;

// With this line, I am saying that create multiple classes rather than a single class
option java_multiple_files = true;

// This is the request message where it takes an id to find data
message ExamGRpcRequest{
  int64 examId = 1;
}

// This is the response message
message ExamGRpcResponse{
  int64 examId = 1;
  int64 teacherId = 2;
  int64 subjectId = 3;
  int64 studentId = 4;
  string date = 5;
  string grade = 6;
}

// This defines our service for the target folder
service ExamGRpcService{
  rpc getExamInfo(ExamGRpcRequest) returns (ExamGRpcResponse);
}